feat(): Added plugins and rework main flow